# a2a-parts-multiagent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_client.py
data/a/: inventory.csv
data/b/: inventory.csv
data/c/: inventory.csv
parts_multiagent/: __init__.py  __main__.py  agent.py  agent_card_builder.py  agent_executor.py  agent_messages.py  command_registry.py  config.py  csv_inventory.py  google_sheet_inventory.py  inventory_log.py  llm_client.py  logging_config.py  peer_client.py  stock_items.py  structured_payload.py  structured_requests.py
parts_multiagent/constants/: __init__.py  prefixes.py  routing.py  skill_prefixes.py  stock_inbound_extraction.py  structured_payload_keys.py  summarizing.py
parts_multiagent/domain/: __init__.py
parts_multiagent/local_inventory_query/: __init__.py  handler.py  parser.py  request.py  response.py
parts_multiagent/order_selection/: __init__.py  handler.py  parser.py  request.py  response.py
parts_multiagent/payment_completion/: __init__.py
parts_multiagent/peer_inventory_query/: __init__.py  handler.py  parser.py  request.py  response.py
parts_multiagent/peer_payment_completion/: __init__.py
parts_multiagent/peer_stock_inbound/: __init__.py  handler.py  parser.py  request.py  response.py
parts_multiagent/peer_stock_outbound/: __init__.py  handler.py  parser.py  request.py  response.py
tests/: __init__.py  test_agent.py  test_config.py  test_google_sheet_inventory.py  test_inventory_query_responses.py  test_logging_config.py  test_request_modules.py
(+118 files in other folders)
